@@ -4,5 +4,5 @@ DIST milter-greylist-4.3.7.tgz 221421 RMD160 e440f28ca5bf024aca061beb7c6055f29f7
 DIST milter-greylist-4.3.8.tgz 222127 RMD160 949a974a386afd3035bbb183d46187069c11eca7 SHA1 a4e8033039b684886599e506e0c7a0b52b2dcd65 SHA256 3bb41876253023159be7e1ad2765d54656559d16c1041fea296d40f7844d3e2f
 EBUILD milter-greylist-4.3.7.ebuild 5232 RMD160 91fccde35ee8f0672f439152e51d39177c1a8abf SHA1 cbd17ba2fd96fb928cab6393c9c7f0bba2782836 SHA256 896905c60277ce8c2e4068e07fc5823d61c9ee9fa5aa08f7f5679ea00a466d4c
 EBUILD milter-greylist-4.3.8.ebuild 5232 RMD160 91fccde35ee8f0672f439152e51d39177c1a8abf SHA1 cbd17ba2fd96fb928cab6393c9c7f0bba2782836 SHA256 896905c60277ce8c2e4068e07fc5823d61c9ee9fa5aa08f7f5679ea00a466d4c
-MISC ChangeLog 2089 RMD160 30117cf3a755d7d8af25678470368c03333b42a2 SHA1 8cd656fe767a5389d541d0da0d3066c0b13609aa SHA256 bc006df82021b529a3d1e929b27cb0bd60ff478a87582c9b04e40ec4a3628050
-MISC metadata.xml 729 RMD160 25319fc07f404a19f5e59c87a2957abbb60f3dbe SHA1 eece0f7146827c1a81360ad7db656366e09eaea5 SHA256 b3da80444762bd78739b510a06288d9cc15d19658f060dcbbf6c7cd3c9760ad3
+MISC ChangeLog 2196 RMD160 e12f0de165e3d1c2d44ec3f98f29665415efdac6 SHA1 df201aef8c106280537ea07309487bc790800ca4 SHA256 2faf4e241d2a298c655080627cd423b0aed0fcbd65571ddf2e68772e4e4aa13b
+MISC metadata.xml 1059 RMD160 2d758af8b856e02e87536a0140f3fde673fff2d9 SHA1 a59202a8a7efc187fcb2f1294938ad086f50d6d6 SHA256 7473916b6551a1327913b7310ba72a7b4e5d810d840d31af3442b14f563427a4
